# video_processing

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TESTPLAN  TODO  plot.py  results.csv  results_backup.csv  test.sh
.github/: clang-format.yml
.github/workflows/: clang-format.yml
src/: CMakeLists.txt  main.cpp
src/libCommon/: CMakeLists.txt
src/libCommon/include/: argparse.hpp  common.h  logger.h  video.h
src/libCommon/src/: CMakeLists.txt  argparse.cpp  common.cpp  logger.cpp  video.cpp
src/libCpu/: CMakeLists.txt
src/libCpu/include/: cpu.h
src/libCpu/src/: CMakeLists.txt  cpu.cpp  main.cpp
src/libGpu/: CMakeLists.txt  README.md
src/libGpu/include/: cuda.cuh  cuda.hpp  gpu.h  opencv-cuda.hpp  test.h
src/libGpu/src/: CMakeLists.txt  cuda.cu  gpu.cpp  gpu_stubs.cpp  main.cpp  opencv-cuda.cpp
